2005-07-20  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: Add support for multiple directory levels to
	try to keep the number of files per directory under 254 for optimal ext3
	file performance, add support for copyright.

2005-07-20  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/plugins/DetDescendantReport.py: Names, events and sources.
	* src/plugins/DetAncestralReport.py (add_user_options): Names, events and sources.

2005-07-20  Alexander Roitman  <shura@gramps-project.org>
	* configure.in: Put release number back to CVS+date.
	* src/po/de.po: Typo.
	* src/plugins/Ancestors.py (person): correctly compare handles.

2005-07-18  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: add media gallery navigation, clean up
	* src/data/main*.css: add support for media gallery navigation

2005-07-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/NavWebPage.py: Optimize separation of multiple families;
	Print out attributes; Print out family note

2005-07-17  Don Allingham  <don@gramps-project.org>
	* src/ReportUtils.py: fix private name generation
	* src/plugins/NavWebPage.py: Add family photos to the gallery,
	handle privacy better and filter out private people from the
	internal lists

2005-07-17  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/Sort.py: Make sure sorting by birthdate handles correctly
	missing dates
	* src/WriteGedcom.py: Export source references at the global person
	level

2005-07-16  Steve Hall  <digitect@mindspring.org>
	* src/data/main*.css: fix <sup> spacing in CSS files

2005-07-16  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: split parents and families
	* src/ReportUtils.py: save note information

2005-07-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/Makefile.am: Install NavWebPage.py plugin
	* src/data/Makefile.am: Install stylesheets for NavWebPage
	
2005-07-15  Don Allingham  <don@gramps-project.org>